# scmorph

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.rst  env.yml  pyproject.toml  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yaml  test.yaml
data/: test_image_data.csv
docs/: api.md  api.rst  community.md  conf.py  references.bib
docs/api/: index.md  preprocessing.rst
docs/notebooks/: batch_effects.ipynb  correlation_comparison.ipynb  example.ipynb  feature_selection.ipynb  hit_calling.ipynb  image_qc.ipynb  scalability.ipynb  why_scone.ipynb
docs/source/: api.rst  conf.py  index.rst  installation.rst  references.rst  tutorials.rst  usage.rst
docs/tutorials/: image_qc.ipynb
docs/tutorials/basics/: batch_effects.ipynb  feature_selection.ipynb  hit_calling.ipynb  image_qc.ipynb  index.md
docs/tutorials/explainers/: correlation_comparison.ipynb  why_scone.ipynb
paper/: paper.md  paper_minimal.bib
src/scmorph/: __init__.py  _logging.py  logging.py  settings.py
src/scmorph/_io/: __init__.py  io.py
src/scmorph/_tl/: __init__.py  _trajectories.py
src/scmorph/_utils/: __init__.py  r_functions.py  utils.py
src/scmorph/datasets/: __init__.py  _datasets.py  test_data.csv  test_image_data.csv  test_image_data.h5ad
src/scmorph/io/: __init__.py  io.py
src/scmorph/logging/: logging.py
src/scmorph/pl/: __init__.py  _dr.py  dr.py
src/scmorph/pp/: __init__.py  _aggregate.py  _batch_effects.py  _correlation.py  _feature_selection.py  _processing.py  _quantile_norm.py  aggregate.py  batch_effects.py  correlation.py  feature_selection.py  processing.py  quantile_norm.py
src/scmorph/qc/: __init__.py  _cells.py  _images.py  _outliers.py  cells.py  images.py  outliers.py
src/scmorph/tl/: __init__.py  hit_calling.py  trajectories.py
src/scmorph/utils/: __init__.py  utils.py
src/scmorph_utils/trajectory/: trajectories.R
tests/: conftest.py  test_feature_selection.py  test_io.py  test_pl.py  test_pp.py  test_qc.py
